Changes with mod_fastcgi 2.2.5

 *) Prevent an assert from popping unnecessarily.

 *) (Win32) Add support for interpretter scripts.

 *) (Win32) Fix named pipe handling (problems with large responses).

 *) (Win32) Remove the "can exec" check.

Changes with mod_fastcgi 2.2.4

 *) Beta WinNT support.  David Allen [djallen@raleigh.ibm.com] and 
    Rob Saccoccio [robs@chelsea.net]

 *) Remove request type restriction (GET and POST only) in order to support
    Web DAV requests.  Scott Robertson [sroberts@codeit.com] 

 *) Allow requests for URLs such as /server/some/other/qualifier to match a
    FastCGI server defined as /server.	This was done primarily for Java
	Servlets, but is generically useful.

 *) Change the comm between the PM and the request handlers from a regular
    file to a pipe and an assortment of other dynamic fixes.

 *) Log dynamic process termination scheduling and the resulting 
    process exit notification.

 *) Change the default singleThreshhold from 10 to 0 to prevent the last dynamic
    application process from being killed off due to low demand.

 *) Clean up FastCGI application pathnames (e.g. remove duplicate slashes). 
 
 *) Fix bugs that prevented dynamic processes from being shutdown when
    the load subsided.  Lars Heete [heete@do.isst.fhg.de]

 *) Prevent dynamic processes from being scheduled to be started before
    the init-start-delay or restart-delay period expires.  This prevents
	the queuing of process start requests while an application which has
	a long initialization period starts up.

 *) When suexec is enabled, allow the process manager to become root again in
    order to signal applications it spawned.

 *) Change the "server started" log message level from INFO to WARN.

 *) Fix dynamic server "Connection Refused" handling.

 *) Fix demand-based dynamic process spawing (uses a more portable approach).

 *) Add -idle-timeout arg to FastCgiServer, FastCgiExternalServer, and